--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=ApiRestHoteles
+spring.application.name=HotelesApi
+
+server.port=8082
+
+spring.datasource.url=jdbc:h2:file:./data/hoteles-db;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+#spring.sql.init.mode=always
+spring.jpa.show-sql=true
+spring.sql.init.encoding=UTF-8
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
