--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.sql.init.data-locations=classpath:data.sql
+
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
